[metadata]
name = pydash
version = attr: pydash.__version__
author = Derrick Gilland
author_email = dgilland@gmail.com
url = https://github.com/dgilland/pydash
description = The kitchen sink of Python utility libraries for doing "stuff" in a functional way. Based on the Lo-Dash Javascript library.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = pydash utility functional lodash underscore
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    typing-extensions>=3.10,!=4.6.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    build
    coverage
    docformatter
    flake8
    flake8-black
    flake8-bugbear
    flake8-isort
    furo
    invoke
    isort
    mypy
    pylint
    pytest
    pytest-mypy-testing
    pytest-cov
    sphinx
    tox
    twine
    wheel
    sphinx-autodoc-typehints


[bdist_wheel]
python_tag = py3

[flake8]
exclude = .tox,venv,env
max_line_length = 100
max_complexity = 12
# F811 - redefinition of unused `name` from line `N`
# E203 - whitespace before ':'
# W503 - line break before binary operator
# E701 - multiple statements on one line (colon)
# E704 - multiple statements on one line (def)
ignore = F811,E203,W503,E701,E704

[mypy]
show_column_numbers = True
show_error_context = False
ignore_missing_imports = True
warn_return_any = False
strict_optional = True
warn_no_return = True
warn_redundant_casts = False
warn_unused_ignores = False

[tool:isort]
line_length = 100
multi_line_output = 3
lines_after_imports = 2
combine_as_imports = true
include_trailing_comma = true
force_sort_within_sections = true

[tool:pytest]
junit_family = xunit2
filterwarnings =
    ignore::pytest.PytestRemovedIn8Warning:pytest_pylint.*
addopts =
    --verbose
    --doctest-modules
    --no-cov-on-fail
    --cov-fail-under=100
    --cov-report=term-missing
    --cov-report=xml:build/coverage/coverage.xml
    --cov-report=html:build/coverage
    --junitxml=build/testresults/junit.xml

[coverage:run]
omit =
    */tests/*
    */test_*
    */_compat.py
    */types.py

[coverage:report]
exclude_lines =
    pragma: no cover
    @t.overload
